<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SCPViewActivity</string>
    <string name="patient">Информация о пациенте</string> 
    <string name="patient_info">PatientInfo</string>
    <string name="id_patient">ID Пациента:</string>
    <string name="surname_patient">Фамилия:</string>
    <string name="father_patient">Отчество:</string>
    <string name="name_patient">Имя:</string>
    <string name="birthday_patient">Дата Рождения:</string>
    <string name="age_patient">Возраст:</string>
    <string name="high_patient">Высота:</string>
    <string name="weight_patient">Вес:</string>
    <string name="sex_patient">Пол:</string>
    <string name="race_patient">Раса:</string>
    <string name="stature_patient">Рост:</string>
    <string name="none_patient">неуказано</string>
    <string name="blood_press_patient">Кровяное давления:</string>
    <string name="sys_press_patient">Систолическое:</string>
    <string name="dya_press_patient">Дистолическое:</string>
    <string name="addr_patient">Адрес:</string>
    <string name="posta_code_patient">Почтовый код:</string>
    <string name="area_patient">Область:</string>
    <string name="zone_patient">Район:</string>
    <string name="nas_punkt_patient">Населенный пункт:</string>
    <string name="street_patient">Улица:</string>
    <string name="house_patient">Дом:</string>
    <string name="time_life_patient">Время проживания(лет):</string>
    <string name="diagnos_patient">Диагноз или направления:</string>
    <string name="medical_history_patient">История болезни:</string>
    <string name="speed">Скорость:</string>
    <string name="power">Усиление:</string>
    <string name="revert_ecg">Инвертировать ЕКГ</string>
    <string name="title_device_get_ecg">Устройства для получения ЭКГ</string>
	<string name="maker">Производитель:</string>
	<string name="org_num">Номер организации:</string>
	<string name="dep_num">Номер отдела:</string>
	<string name="dev_id">ID устройства:</string>
	<string name="dev_type">Тип устройства:</string>
	<string name="model">Модель:</string>
	<string name="hz">Частота сети(Гц):</string>
	<string name="title_dev_do">Возможности устройства</string>
	<string name="soft_version">Версия анализирующего ПО:</string>
	<string name="serial_num">Серийный номер:</string>
	<string name="sys_soft">Системное ПО:</string>
	<string name="soft_scp">ПО, реализующее протокол SCP:</string>
	<string name="check_print">Печать</string>
	<string name="check_analys">Анализ</string>
	<string name="check_save">Хранения</string>
	<string name="check_take">Прием</string>
	<string name="org_write_ecg">Учреждения, записывавшее ЭКГ:</string>
	<string name="org_analys_ecg">Учреждения, анализировавшее ЭКГ:</string>
	<string name="dep_get_ecg">Отдел, принимавший ЭКГ:</string>
	<string name="dep_analys_ecg">Отдел, анализировавший ЭКГ:</string>
	<string name="go_doctor">Направляющие врачи:</string>
	<string name="ok_doctor">Подтверждающие врачи:</string>
	<string name="date_get_ecg">Дата получения ЭКГ:</string>
	<string name="time_get_ecg">Время получения ЭКГ:</string>
    <string name="none"></string>
    
    
    <string name="checkbox2_title">CheckBox 2</string>
<string name="checkbox2_summary">Summary of CheckBox 2</string>
<string name="edittext2_title">EditText 2</string>
<string name="edittext2_summary">Summary of EditText 2</string>
<string name="list2_title">List 2</string>
<string name="list2_summary">Summary of List 2</string>
<string name="category1">Category 1</string>
<string name="category2">Category 2</string>
<string name="screen1_title">Screen 1</string>
<string name="screen1_summary">Summary of Screen 1</string>
<string name="screen2_title">Screen 2</string>
<string name="screen2_summary">Summary of Screen 2</string>
<string name="header1_title">Header 1</string>
<string name="header1_summary">Summary of Header 1</string>
<string name="header2_title">Header 2</string>
<string name="header2_summary">Summary of Header 2</string>
<string name="header3_title">Header 3</string>
<string name="header3_summary">Summary of Header 3</string>

<string-array name="entries">
<item>one</item>
<item>two</item>
<item>three</item>
</string-array>
<string-array name="entry_values">
<item>1</item>
<item>2</item>
<item>3</item>
</string-array>
</resources>
