<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/patieninfo2_linear_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical">
    	<ScrollView
    	    android:id="@+id/patient_scroll_view"
    	    android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
    	    <RelativeLayout
    	        android:id="@+id/patient_info"
    	        style="@style/RelativeStyle">
    	        <RelativeLayout
    	            android:id="@+id/id_patient_layout"
    	        	style="@style/RelativeStyle">
					<TextView 
						android:id="@+id/id_patient"
						android:text="@string/id_patient"
						style="@style/ViewStyleKey"/>
	
					<TextView
					    android:id="@+id/id_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/id_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/surname_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/id_patient_layout">
					<TextView 
						android:id="@+id/surname_patient"
						style="@style/ViewStyleKey"
						android:text="@string/surname_patient"/>
	
					<TextView
					    android:id="@+id/surname_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/surname_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				
				<RelativeLayout
    	            android:id="@+id/name_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/surname_patient_layout">
					<TextView 
						android:id="@+id/name_patient"
						style="@style/ViewStyleKey"
						android:text="@string/name_patient"/>
					<TextView
					    android:id="@+id/name_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/name_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/father_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/name_patient_layout">
					<TextView 
						android:id="@+id/father_patient"
						style="@style/ViewStyleKey"
						android:text="@string/father_patient"/>
					<TextView
					    android:id="@+id/father_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/father_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/birthday_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/father_patient_layout">
					<TextView
					    android:id="@+id/birthday_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/birthday_patient"
					    android:text="@string/none_patient" />
					<TextView
					    android:id="@+id/birthday_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/birthday_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/weight_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/birthday_patient_layout">
					<TextView
					    android:id="@+id/weight_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/weight_patient" />
					<TextView
					    android:id="@+id/weight_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/weight_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/sex_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/weight_patient_layout">
					<TextView
					    android:id="@+id/sex_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/sex_patient" />
					<TextView
					    android:id="@+id/sex_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/sex_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/race_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/sex_patient_layout">
					<TextView
					    android:id="@+id/race_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/race_patient" />
					<TextView
					    android:id="@+id/race_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/race_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/blood_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/race_patient_layout">
					<TextView
					    android:id="@+id/blood_press_patient"
					    style="@style/HeadRealativeStyle"
					    android:text="@string/blood_press_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/blood2_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/blood_patient_layout">
					<TextView
					    android:id="@+id/sys_press_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/sys_press_patient" />
					<TextView
					    android:id="@+id/sys_press_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/sys_press_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/blood3_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/blood2_patient_layout">
					<TextView
					    android:id="@+id/dya_press_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/dya_press_patient" />
					<TextView
					    android:id="@+id/dya_press_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/dya_press_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/addr_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/blood3_patient_layout">
					<TextView
					    android:id="@+id/addr_patient"
					    style="@style/HeadRealativeStyle"
					    android:text="@string/addr_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/posta_code_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/addr_patient_layout">
					<TextView
					    android:id="@+id/posta_code_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/posta_code_patient" />
					<TextView
					    android:id="@+id/posta_code_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/posta_code_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/area_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/posta_code_patient_layout">
					<TextView
					    android:id="@+id/area_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/area_patient" />
					<TextView
					    android:id="@+id/area_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/area_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/zone_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/area_patient_layout">
					<TextView
					    android:id="@+id/zone_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/zone_patient" />
					<TextView
					    android:id="@+id/zone_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/zone_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/nas_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/zone_patient_layout">
					<TextView
					    android:id="@+id/nas_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/nas_punkt_patient" />
					<TextView
					    android:id="@+id/nas_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/nas_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/street_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/nas_patient_layout">
					<TextView
					    android:id="@+id/street_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/street_patient" />
					<TextView
					    android:id="@+id/street_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/street_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/house_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/street_patient_layout">
					<TextView
					    android:id="@+id/house_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/house_patient" />
					<TextView
					    android:id="@+id/house_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/house_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/life_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/house_patient_layout">
					<TextView
					    android:id="@+id/life_patient"
					    style="@style/ViewStyleKey"
					    android:text="@string/time_life_patient" />
					<TextView
					    android:id="@+id/life_patient_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/life_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/diagnose_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/life_patient_layout">
					<TextView
					    android:id="@+id/diagnose_patient"
					    style="@style/HeadRealativeStyle"
					    android:text="@string/diagnos_patient" />
					<TextView
					    android:id="@+id/diagnose_patient_value"
					    style="@style/Edit2StyleValue"
					    android:layout_below="@+id/diagnose_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/history_patient_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/diagnose_patient_layout">
					<TextView
					    android:id="@+id/history_patient"
					    style="@style/HeadRealativeStyle"
					    android:text="@string/medical_history_patient" />
					<TextView
					    android:id="@+id/history_patient_value"
					    style="@style/Edit2StyleValue"
					    android:layout_below="@+id/history_patient"
					    android:text="@string/none_patient" />
				</RelativeLayout>
			</RelativeLayout>
		</ScrollView>
</LinearLayout>