<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
		android:id="@+id/speed_text"
		style="@style/ECGViewStyle"
		android:text="@string/speed" />
    <SeekBar
        android:id="@+id/speed"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/speed_text"
		android:progressDrawable="@drawable/progress_drawable"
 		android:thumb="@drawable/thumb_drawable"/>
    <TextView
		android:id="@+id/speed_value"
		style="@style/EditStyleValue"
		android:layout_toRightOf="@+id/speed"
		android:text="@string/none" />
    <TextView
		android:id="@+id/power_text"
		style="@style/ECGViewStyle"
		android:text="@string/power"
		android:layout_below="@+id/speed_text" />
    <SeekBar
        android:id="@+id/power"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/power_text"
		android:progressDrawable="@drawable/progress_drawable"
		android:layout_below="@+id/speed"
 		android:thumb="@drawable/thumb_drawable"/>
    <TextView
		android:id="@+id/power_value"
		style="@style/EditStyleValue"
		android:layout_toRightOf="@+id/power"
		android:layout_below="@+id/speed_value"
		android:text="@string/none" />
    <CheckBox
		android:id="@+id/check_revert_ecg"
		style="@style/CheckStyle"
		android:layout_below="@+id/power_text"
		android:text="@string/revert_ecg" />
	<ua.stu.view.scpview.ECGPanel
		android:id="@+id/ecgpanel"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/check_revert_ecg" />
</RelativeLayout>